--- a/src/assets/animate.css
+++ b/src/assets/animate.css
@@ -5,6 +5,7 @@
  * Licensed under the MIT license - http://opensource.org/licenses/MIT
  *
  * Copyright (c) 2020 Animate.css
+ * 动画
  */
 :root {
   --animate-duration: 1s;
